...
        }
    }
}

class HomeModule: AppModule {
    let id = "home"
    var name = "首頁"
    var icon = "house.fill"
    var isEnabled: Bool = true
    let order = 0

    func configure() {}
    func enable() { isEnabled = true }
...
